--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -109,7 +109,7 @@ bpmodulesdir = $(datadir)/bp_modules
 nobase_bpmodules_DATA = BatchParallel/common.pm BatchParallel/compress.pm BatchParallel/jobsfile.pm
 
 perllibdir = $(datadir)/perl5
-nobase_perllib_DATA = Text/ExpandInt.pm Plot/Mercury.pm
+nobase_perllib_DATA = Text/ExpandInt.pm Plot/Mercury.pm Plot/Mercury/Tics.pm
 
 packagingdir = $(datadir)/packaging
 packaging_DATA = redhat-rules
