* (1) Update ConstantString to work without the gc library; fix it to work      properly with strings that include nulls
com_hp_hpl_lintel.m4: add in DMALLOC_THR_LIBS to dmalloc macro

Clock.H: add converter from Tfrac to struct timeval

ConstantString.[CH]: (1) Add todo to deal with thread safeness.  Add TODO
  to figure out how to make hashtable able to handle lookups with types
  that don't match the htedata structure.  This would improve performance
  as we could do the initial duplicate elimination lookup on a pointer and
  length and only convert to the contiguous structure if the string is 
  missing.

include/Makefile.am: (1)

include/make_gcalloc_h.pl: define WITH_LINTEL_GC_ALLOC if we built a real
  header; was going to always build a header, but decided not to at
  this point.

make-dist.sh: rm autom4te.cache before building tarballs, it's not needed

src/Makefile.am: Make ConstantString bits always built/installed

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -8,6 +8,7 @@ nobase_include_HEADERS = \
 	Lintel/AssertException.H \
 	Lintel/Clock.H \
 	Lintel/CompilerMarkup.H \
+	Lintel/ConstantString.H \
 	Lintel/Deque.H \
 	Lintel/Double.H \
 	Lintel/HashMap.H \
@@ -51,14 +52,14 @@ nobase_include_HEADERS += \
 endif
 
 if WITH_GC
-nobase_include_HEADERS += \
-	Lintel/ConstantString.H \
-	Lintel/GC_Alloc.H
+nobase_include_HEADERS +=
+	Lintel/GC_Alloc.H 
 
 Lintel/GC_Alloc.H: make_gcalloc_h.pl
 	[ -d Lintel ] || mkdir Lintel
 	perl $(srcdir)/make_gcalloc_h.pl >$@-new
 	mv $@-new $@
+
 endif
 
 if WITH_HPUX_REPLACE_MEMORY
