* Add function to allow you to add one stats object to another one.
stats.cpp: test for the new stats merging code; TODO for testing stats in 
  general.

configure.ac: drop the version of lintel to 0.0; add conditional for whether
  we have monotone for eventually supporting a "more recent than this version"
  calculation in lintel-config.

ConstantString.H: remove unnecessary inline declarations, add hash function
  that calculates a hash from the constantstring pointer.

HashMap.H: add TODO about fixing return value of HashMap_hash

Stats{,EMA,Histogram,Quantile,Sequence,Series,SeriesGroup}.H: 
  add new add(const Stats &) declaration.

StatsQuantile.H: also separate out the add function that handles the
  quantile specific adding.

Makefile.am: add stats check program

Stats.C: implement add(const Stats &) function, easy for basic stats.

Stats{EMA,Histogram,Sequence,Series,SeriesGroup}: add version of 
  add(const Stats &) function that aborts with unimplemented.

StatsQuantile.C: complex add(const Stats &) function, basically we pretend
  that we saw all the values in the other quantile, this makes the function
  slow, but easy to understand.

stats_quantile.C: add test for add(const Stats &), add using namespace std,
  and remove all of the std::'s.

stats_quantile.good: new test prints out more output; allow it.

--- a/configure.ac
+++ b/configure.ac
@@ -6,7 +6,7 @@
 #
 # Process this file with autoconf to produce a configure script.
 
-AC_INIT(Lintel, 1.0, [software@cello.hpl.hp.com])
+AC_INIT(Lintel, 0.0, [software@cello.hpl.hp.com])
 
 AC_PREREQ(2.57)
 
@@ -153,6 +153,8 @@ case $host in
      echo "********************************************************";
      RANDOM_COMPARETO=tests/Random.linux.regression ;;
 esac
+
+AM_CONDITIONAL(HAS_MTN_REVISION, test -f $(srcdir)/_MTN/revision)
 
 AC_SUBST(RANDOM_COMPARETO)
 
