* (1) Add LeastSquares module -- can't find one already out there in C++.    * Sundry other minor improvements
LeastSquares.[ch]pp: (1) header/implementation, using future .[ch]pp
  style filenames

least_squares.cpp: (1) regression test

com_hp_hpl_lintel.m4: extend error message on not being able to find lintel.

Clock.H: add converter from Tfrac to double in seconds, both from signed and
  unsigned tfrac units.

HashMap.H: add pointer to HashTable warning about use of HashMap.

HashTable.H: Add a bunch of documentation warning about putting a pointer
  into a hashmap structure.  It turns out this isn't safe if the destructor
  deletes the pointer because the data can be deleted when an internal copy
  of the structure is made.  Experimentally the std::map datastructure 
  exhibits the same problem.

StatsQuantile.H: make it noncopyable.

{src/include}/Makefile.am: (1)

StatsQuantile.C: note that quantiles are *about* every n points, matters when
  the # points is small.

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -14,6 +14,7 @@ nobase_include_HEADERS = \
 	Lintel/HashMap.H \
 	Lintel/HashTable.H \
 	Lintel/HashUnique.H \
+	Lintel/LeastSquares.hpp \
 	Lintel/LintelAssert.H \
 	Lintel/LintelVersion.H \
 	Lintel/MathSpecialFunctions.H \
