* (1) Add per-thread function for Clock; re-sort the clock routines to have      somewhat more structure (it was getting to be a grab-bag), and add      tfrac versions of the todcc functions.
ClockPThread.cpp: new functions that require -lpthread

Clock.H: (1)

Clock.C: (1), Add a TODO around doing multiple tod_epoch calls if they
  take less than a us, hunting for the boundary.

Double.C: use assertboost, check isinf(-Inf) -- gdb was confused.

Makefile.am: add ClockPThread.cpp to libLintelPthread sources

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -97,7 +97,7 @@ if WITH_BOOST
 libLintelPThread_la_LDFLAGS = -version-info @LIBLINTELPTHREAD_VERSION@ 
 libLintelPThread_la_LIBADD = libLintel.la -lpthread
 libLintelPThread_la_SOURCES = \
-	PThread.C
+	PThread.C ClockPThread.cpp
 endif
 
 if WITH_MAKEBITS
