* Add checksum module for batch-parallel to do parallel checksumming,      optionally of the uncompressed contents of the files.
compress.pm: remove the restriction that the file to compress not be a symlink;
  can't figure out why it was in there, but it had been in since near the
  beginning.

Makefile.am: install the checksum module.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -108,7 +108,7 @@ install-exec-local::
 endif
 
 bpmodulesdir = $(datadir)/bp_modules
-nobase_bpmodules_DATA = BatchParallel/common.pm BatchParallel/compress.pm BatchParallel/jobsfile.pm
+nobase_bpmodules_DATA = BatchParallel/common.pm BatchParallel/compress.pm BatchParallel/jobsfile.pm BatchParallel/checksum.pm
 
 perllibdir = $(datadir)/perl5
 nobase_perllib_DATA = Text/Expand.pm Text/ExpandInt.pm Plot/Mercury.pm Plot/Mercury/Tics.pm Lintel/Net/SSH/KnownHostsFile.pm
